// Vitest Snapshot v1

exports[`Button component > Loading state > renders a loading button 1`] = `
<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-DdIlq-isLoading-true c-fkUJsw-gsycxF-cv"
    type="button"
  >
    <div
      class="c-dhzjXW c-dhzjXW-ihMdMjL-css"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
    </div>
    <span
      class="c-PJLV c-PJLV-ikHJJOk-css"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component > renders a button 1`] = `
<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component > renders a button with an icon 1`] = `
<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-dbrbZt-idQfaGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component > renders a disabled button 1`] = `
<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-gsycxF-cv"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component > renders a disabled warning outline button 1`] = `
<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component > renders a outline button 1`] = `
<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-fSssiS-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component > renders a outline button with secondary theme 1`] = `
<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-skNNT-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component > renders a rounded button  1`] = `
<div>
  <button
    class="c-fkUJsw c-fkUJsw-elrwsr-size-md c-fkUJsw-rloUt-isRounded-true c-fkUJsw-gsycxF-cv"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-dbrbZt-idQfaGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;
